# catalyst-data

./: .dockerignore  .gitignore  ONTOLOGY.md  README.md  pyproject.toml  qa-checklist.md
.beads/: issues.jsonl
.github/workflows/: build-image.yaml  ci.yaml
congress-data/: Dockerfile
congress-data/tests/: test_definitions.py
k8s/: kustomization.yaml  namespace.yaml
k8s/congress-data/: deployment.yaml  service.yaml
k8s/data-explorer/: deployment.yaml  ingressroute.yaml  service.yaml
k8s/knowledge-graph/: deployment.yaml  service.yaml
k8s/media-ingest/: deployment.yaml  service.yaml
k8s/monitoring/: grafana-dashboard.yaml  prometheusrule.yaml  servicemonitor.yaml
k8s/open-leaks/: deployment.yaml  service.yaml
k8s/platform/: dagster-instance.yaml  deployment.yaml  neo4j.yaml  postgres-knowledge.yaml  rbac.yaml  workspace.yaml
k8s/secrets/: externalsecret-congress.yaml  externalsecret-llm.yaml  (+2 more)
libs/: README.md
libs/catalyst-contracts-core/: README.md  pyproject.toml
libs/catalyst-contracts-core/src/catalyst_contracts_core/: __init__.py  enums.py  types.py
libs/catalyst-contracts-core/tests/: conftest.py  test_enums.py  test_types.py
libs/catalyst-langgraph-aio/: README.md  TESTING.md  pyproject.toml
libs/catalyst-langgraph-aio/src/catalyst_langgraph/: __init__.py  graph.py  prompts.py  state.py
libs/catalyst-langgraph-aio/src/catalyst_langgraph/clients/: __init__.py  llm.py  mcp.py
libs/catalyst-langgraph-aio/src/catalyst_langgraph/nodes/: __init__.py  _audit.py  extract_mentions.py  extract_propositions.py  persist_artifacts.py  repair_mentions.py  repair_propositions.py  validate_mentions.py  validate_propositions.py
libs/catalyst-langgraph-aio/src/catalyst_langgraph/repository/: __init__.py  base.py  jsonl.py
libs/catalyst-langgraph-aio/src/prompts/: mention_extraction.prompt  mention_repair.prompt  proposition_extraction.prompt  proposition_repair.prompt
libs/catalyst-langgraph-aio/tests/: conftest.py  test_direct_mcp_client.py  test_full_flow_integration.py  test_graph_happy_path.py  test_graph_max_retries.py  test_graph_repair_path.py  test_llm_client.py  test_mcp_client.py  test_mcp_timeout.py  test_nodes.py  test_prompts.py  test_real_validator_integration.py  test_repository.py  test_routing.py  test_state.py
libs/catalyst-llm-contract-mcp/: TESTING.md  pyproject.toml  readme.md
libs/catalyst-llm-contract-mcp/fixtures/: invalid_mentions.json  invalid_propositions.json  sample_source_text.txt  valid_mentions.json  valid_propositions.json
libs/catalyst-llm-contract-mcp/src/catalyst_contracts/: __init__.py  server.py
libs/catalyst-llm-contract-mcp/src/catalyst_contracts/audit/: __init__.py  repository.py
libs/catalyst-llm-contract-mcp/src/catalyst_contracts/models/: __init__.py  concordance.py  evidence.py  extraction_output.py  math.py  mentions.py  propositions.py  repair.py  spatial.py  validation.py
libs/catalyst-llm-contract-mcp/src/catalyst_contracts/validators/: __init__.py  concordance_validator.py  math_validator.py  mention_validator.py  proposition_validator.py  repair_generator.py  spatial_validator.py
libs/catalyst-llm-contract-mcp/tests/: conftest.py  test_audit.py  test_mention_validator.py  test_server.py
libs/catalyst-llm-contract-mcp/tests/test_models/: test_concordance.py  test_evidence.py  test_math.py  test_mentions.py  test_propositions.py  test_repair.py  test_spatial.py  test_validation.py
libs/catalyst-llm-contract-mcp/tests/test_validators/: test_concordance_validator.py  test_math_validator.py  test_mention_validator.py  test_proposition_validator.py  test_repair_generator.py  test_spatial_validator.py
libs/dagster-io/: pyproject.toml
libs/dagster-io/notebooks/: test_resources.ipynb
libs/dagster-io/prompts/ner/: basic.prompt
libs/dagster-io/src/dagster_io/: __init__.py  chunking.py  concordance.py  document.py  embedding_config.py  io_manager.py  llm.py  logging.py  manifest.py  metrics.py  models.py  observability.py  path_builder.py  processing_tracker.py  prompts.py  s3_client.py  serializers.py
media-ingest/: Dockerfile
scripts/: materialize.sh  qa-test.sh
tests/: conftest.py
(+15 files in other folders)
