[project]
name = "catalyst-data-tests"
version = "0.1.0"
description = "Test harness for catalyst-data Dagster pipelines"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov", "dagster>=1.9", "pydantic>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/congress-data/tests", "packages/media-ingest/tests", "packages/open-leaks/tests"]
addopts = "--import-mode=importlib"
