[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catalyst-contracts-core"
version = "0.1.0"
description = "Shared enums and base types for catalyst KG contracts"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/catalyst_contracts_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
